# PDF-

./: =0.14.0  =1.13.0  =1.7.0  =10.0.0  =4.8.0  CHANGELOG.md  README.md  check_env.py  digit_enhancement.py  install-rocky.sh  install.py  install_easyocr.py  main.py  paddleocr_v3_monkeypatch.py  pyproject.toml  quick_start.sh  rename_pdfs.py  requirements.txt  start.bat  start.sh  test_ui.html  新功能说明.md
app/: main.py
app/templates/: index.html
pdfrename_example/: README.md  main_ui.py  ocr_rename.py  old.py  requirements.txt
templates/: index.html
