[tool.poetry]
name = "pdf-webui-renamer"
version = "2.0.0"
description = "PDF批量重命名工具 - WebUI版本，基于AI OCR技术的智能PDF文件重命名系统"
authors = ["PDF Renamer Team <team@pdf-renamer.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/pdf-renamer/pdf-webui-renamer"
repository = "https://github.com/pdf-renamer/pdf-webui-renamer"
keywords = ["pdf", "ocr", "rename", "ai", "webui", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

# Web框架核心依赖
fastapi = {extras = ["standard"], version = ">=0.104.0"}
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
python-multipart = ">=0.0.6"
jinja2 = ">=3.1.0"

# PDF处理依赖
PyMuPDF = ">=1.23.0"

# 图像处理依赖
Pillow = ">=10.0.0"
opencv-python = ">=4.8.0"
numpy = ">=1.24.0"

# OCR识别引擎
pytesseract = ">=0.3.10"
easyocr = {version = ">=1.7.0", optional = true}
torch = {version = ">=1.13.0", optional = true}
torchvision = {version = ">=0.14.0", optional = true}
paddlepaddle = {version = ">=2.5.0", optional = true}
paddleocr = {version = ">=2.7.0", optional = true}

# 数据处理与科学计算
scipy = ">=1.7.0"
scikit-learn = ">=1.0.0"

# 系统工具
psutil = ">=5.9.0"

# 开发调试工具
python-dotenv = ">=1.0.0"
rich = ">=13.0.0"

# 额外工具依赖
requests = ">=2.28.0"
aiofiles = ">=23.0.0"

[tool.poetry.extras]
easyocr = ["easyocr", "torch", "torchvision"]
paddleocr = ["paddlepaddle", "paddleocr"]
full = ["easyocr", "torch", "torchvision", "paddlepaddle", "paddleocr"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[tool.poetry.scripts]
pdf-renamer = "main:start_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
