[tool.poetry]
name = "pdf-webui-renamer"
version = "0.1.0"
description = "PDF批量重命名工具 - 基于OCR识别的WebUI版本"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-repo/pdf-webui-renamer"
repository = "https://github.com/your-repo/pdf-webui-renamer"
keywords = ["pdf", "ocr", "rename", "batch", "webui", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

# Web框架核心依赖
fastapi = {extras = ["standard"], version = ">=0.104.0"}
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
python-multipart = ">=0.0.6"
jinja2 = ">=3.1.0"

# PDF处理依赖
PyMuPDF = ">=1.23.0"

# 图像处理依赖
Pillow = ">=10.0.0"
opencv-python = ">=4.8.0"
numpy = ">=1.24.0"

# OCR识别引擎
pytesseract = ">=0.3.10"
easyocr = ">=1.7.0"
torch = ">=1.13.0"
torchvision = ">=0.14.0"

# 数据处理与科学计算
scipy = ">=1.7.0"
scikit-learn = ">=0.24.0"

# 系统工具
psutil = ">=5.9.0"

# PaddleOCR (可选，如果安装失败不影响基本功能)
paddlepaddle = {version = ">=2.5.0", optional = true}
paddleocr = {version = ">=2.7.0", optional = true}

[tool.poetry.extras]
paddle = ["paddlepaddle", "paddleocr"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-renamer = "main:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
